-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.5.1, Qt Creator 4.6.0-beta1
-
None
-
Windows 10, macOS 10.11, Linux
Debugging is broken in the 5.11 beta1 package, tested with Qt Creator 4.5.1 and 4.6 on macOS, Linux and Windows, same issue across the board.
Debugging starts
I art : Late-enabling -Xcheck:jni
W System : ClassLoader referenced unknown path:
I QtCore : Start
W linker : /data/app/org.qtproject.example.collidingmice-2/lib/arm/libQt5Gui.so: unused DT entry: type 0x1d arg 0x56621
W linker : /data/app/org.qtproject.example.collidingmice-2/lib/arm/libQt5Gui.so: unsupported flags DT_FLAGS_1=0x81
W linker : /data/app/org.qtproject.example.collidingmice-2/lib/arm/libQt5Widgets.so: unused DT entry: type 0x1d arg 0x6d3bb
W linker : /data/app/org.qtproject.example.collidingmice-2/lib/arm/libQt5Widgets.so: unsupported flags DT_FLAGS_1=0x81
W linker : /data/data/org.qtproject.example.collidingmice/qt-reserved-files/plugins/platforms/android/libqtforandroid.so: unused DT entry: type 0x1d arg 0x8d5c
W linker : /data/data/org.qtproject.example.collidingmice/qt-reserved-files/plugins/platforms/android/libqtforandroid.so: unsupported flags DT_FLAGS_1=0x81
I Qt : qt started
I Qt JAVA : DEBUGGER: extra parameters: Bundle[{debug_ping=true, gdbserver_socket=/data/data/org.qtproject.example.collidingmice/debug-socket, gdbserver_command=/data/data/org.qtproject.example.collidingmice/lib/libgdbserver.so --multi +/data/data/org.qtproject.example.collidingmice/debug-socket, ping_socket=org.qtproject.example.collidingmice.ping_pong_socket}]
I Qt JAVA : DEBUGGER: removing gdb socket /data/data/org.qtproject.example.collidingmice/debug-socket
I Qt JAVA : DEBUGGER: starting /data/user/0/org.qtproject.example.collidingmice/lib/libgdbserver.so --multi +/data/data/org.qtproject.example.collidingmice/debug-socket
I Qt JAVA : DEBUGGER: gdbserver started
I Qt JAVA : DEBUGGER: waiting for socket at /data/data/org.qtproject.example.collidingmice/debug-socket, attempt 0
I Qt JAVA : DEBUGGER: socket ok
I Qt JAVA : DEBUGGER: Waiting for debug socket connect
I Qt JAVA : DEBUGGER: go to sleep
I Qt JAVA : DEBUGGER: Waiting for debug socket connect
I Qt JAVA : DEBUGGER: go to sleep
I Qt JAVA : DEBUGGER: Waiting for debug socket connect
I Qt JAVA : DEBUGGER: go to sleep
I Qt JAVA : DEBUGGER: Waiting for debug socket connect
I Qt JAVA : DEBUGGER: go to sleep
I Qt JAVA : DEBUGGER: Debug socket accepted
I Qt JAVA : DEBUGGER: Waiting for debug socket connect
I Qt JAVA : DEBUGGER: go to sleep
I Qt JAVA : DEBUGGER: Waiting for debug socket connect
I Qt JAVA : DEBUGGER: go to sleep
I Qt JAVA : DEBUGGER: Waiting for debug socket connect
I Qt JAVA : DEBUGGER: go to sleep
Could not load shared library symbols for 110 libraries, e.g. /system/bin/linker.
Use the "info sharedlibrary" command to see the complete listing.
Do you need "set solib-search-path" or "set sysroot"?
Unable to find dynamic linker breakpoint function.
GDB will be unable to debug shared library initializers
and track explicitly loaded dynamic code.
I Qt JAVA : DEBUGGER: Incoming socket OK
I Qt JAVA : DEBUGGER: Got pid acknowledgment
I Qt JAVA : DEBUGGER: ping not requested
I Qt JAVA : DEBUGGER: pong not requested
D OpenGLRenderer: Use EGL_SWAP_BEHAVIOR_PRESERVED: true
I Adreno-EGL: <qeglDrvAPI_eglInitialize:379>: QUALCOMM Build: 10/21/15, 369a2ea, I96aee987eb
I OpenGLRenderer: Initialized EGL, version 1.4
W linker : /data/app/org.qtproject.example.collidingmice-2/lib/arm/libcollidingmice.so: unused DT entry: type 0x1d arg 0x250a
W linker : /data/data/org.qtproject.example.collidingmice/qt-reserved-files/plugins/styles/libqandroidstyle.so: unused DT entry: type 0x1d arg 0x44b9
W linker : /data/data/org.qtproject.example.collidingmice/qt-reserved-files/plugins/styles/libqandroidstyle.so: unsupported flags DT_FLAGS_1=0x81
W linker : /data/data/org.qtproject.example.collidingmice/qt-reserved-files/plugins/imageformats/libqjpeg.so: unused DT entry: type 0x1d arg 0x1052
W linker : /data/data/org.qtproject.example.collidingmice/qt-reserved-files/plugins/imageformats/libqjpeg.so: unsupported flags DT_FLAGS_1=0x81
W libcollidingmice.so: (null):0 ((null)): QPainter::begin: Paint device returned engine == 0, type: 2
W libcollidingmice.so: (null):0 ((null)): QPainter::setPen: Painter not active
W libcollidingmice.so: (null):0 ((null)): QPainter::setBrush: Painter not active
W libcollidingmice.so: (null):0 ((null)): QPainter::setRenderHint: Painter must be active to set rendering hints
W libcollidingmice.so: (null):0 ((null)): QPainter::begin: Paint device returned engine == 0, type: 2
W libcollidingmice.so: (null):0 ((null)): QPainter::setPen: Painter not active
W libcollidingmice.so: (null):0 ((null)): QPainter::setBrush: Painter not active
W libcollidingmice.so: (null):0 ((null)): QPainter::setRenderHint: Painter must be active to set rendering hints
W libcollidingmice.so: (null):0 ((null)): QPainter::begin: Paint device returned engine == 0, type: 2
W libcollidingmice.so: (null):0 ((null)): QPainter::setPen: Painter not active
W libcollidingmice.so: (null):0 ((null)): QPainter::setBrush: Painter not active
W libcollidingmice.so: (null):0 ((null)): QPainter::setRenderHint: Painter must be active to set rendering hints
W libcollidingmice.so: (null):0 ((null)): QPainter::begin: Paint device returned engine == 0, type: 2
W libcollidingmice.so: (null):0 ((null)): QPainter::setPen: Painter not active
W libcollidingmice.so: (null):0 ((null)): QPainter::setBrush: Painter not active
W libcollidingmice.so: (null):0 ((null)): QPainter::setRenderHint: Painter must be active to set rendering hints
Debugging has finished
"org.qtproject.example.collidingmice" died.
- is duplicated by
-
QTCREATORBUG-20084 Android debugging fails with an application crash
-
- Open
-
-
QTCREATORBUG-15738 Stuck forever when trying to rerun the same configuration
-
- Closed
-
-
QTCREATORBUG-16150 QML Debugger: Unable to listen to port 45339
-
- Closed
-
-
QTCREATORBUG-16961 Can't debug Qt (controls) project on Android or iOS
-
- Closed
-
-
QTCREATORBUG-19087 Debugging Qt/QML Android application failed
-
- Closed
-
-
QTCREATORBUG-18159 App won't launch in debug mode on API level 16
-
- Closed
-
- is required for
-
QTCREATORBUG-20084 Android debugging fails with an application crash
-
- Open
-
- relates to
-
QTCREATORBUG-19406 Android Debug on Pixel 2 not working
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-19931 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 222929,3 | Android: Pull linker from device/emulator | 4.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |