src/plugins/android/androiddeployqtstep.h
@@ -113,11 +113,10 @@ private:
 
     Utils::FileName m_manifestName;
     QString m_serialNumber;
-    QString m_buildDirectory;
     QString m_avdName;
     QString m_apkPath;
+    QMap<QString, QString> m_filesToPull;
     QStringList m_appProcessBinaries;
-    QString m_libdir;
 
     QString m_targetArch;
     bool m_uninstallPreviousPackage = false;
